Working kubernetes configs for both apps.

--- a/mn-teams/src/main/resources/application.yml
+++ b/mn-teams/src/main/resources/application.yml
@@ -1,30 +1,31 @@
 micronaut:
   application:
-    name: mn-data
+    name: mn-teams
   server:
-    port: -1
+    port: 8080
 jackson:
   bean-introspection-module: true
 ---
 datasources:
   default:
-    url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
-    driverClassName: org.h2.Driver
-    username: sa
-    password: ''
-    schema-generate: CREATE_DROP
-    dialect: H2
+    url: jdbc:postgresql://${MN_POSTGRES_HOST:localhost}:${MN_POSTGRES_PORT:5432}/${MN_POSTGRES_DB:empplay}
+    driverClassName: org.postgresql.Driver
+    username: ${MN_POSTGRES_USER:empplay}
+    password: ${MN_POSTGRES_PASSWORD:Password1}
+    schema-generate: NONE
+    dialect: Postgres
 jpa:
   default:
     properties:
       hbm2ddl:
-        auto: create-drop
-flyway:
-  datasources:
-    default:
-      locations: classpath:databasemigrations
-consul:
-  client:
-    registration:
-      enabled: true
-    defaultZone: "${CONSUL_HOST:localhost}:${CONSUL_PORT:8500}"
+        auto: none
+      database-platform: org.hibernate.dialect.PostgreSQLDialiect
+#flyway:
+#  datasources:
+#    default:
+#      locations: classpath:databasemigrations
+#consul:
+#  client:
+#    registration:
+#      enabled: true
+#    defaultZone: "${CONSUL_HOST:localhost}:${CONSUL_PORT:8500}"
