--- a/postgres/k8s/postgres-deployment.yaml
+++ b/postgres/k8s/postgres-deployment.yaml
@@ -12,7 +12,7 @@ spec:
       containers:
         - name: postgres
           image: postgres:11.5
-          imagePullPolicy: "IfNotPresent"
+          imagePullPolicy: "Always"
           ports:
             - containerPort: 5432
           envFrom:
