--- a/postgres/k8s/postgres-storage.yaml
+++ b/postgres/k8s/postgres-storage.yaml
@@ -12,7 +12,7 @@ spec:
   accessModes:
     - ReadWriteMany
   hostPath:
-    path: "/C/Work/k8s/postgresql/data"
+    path: "/data/pv0001"
 ---
 kind: PersistentVolumeClaim
 apiVersion: v1
