Adding Redis support in teams app

--- a/mn-employees/k8s/deployment.yaml
+++ b/mn-employees/k8s/deployment.yaml
@@ -25,6 +25,8 @@ spec:
           envFrom:
             - configMapRef:
                 name: postgres-config
+            - configMapRef:
+                name: redis-config
           imagePullPolicy: Always
       restartPolicy: Always
 
