--- a/mn-employees/build.gradle
+++ b/mn-employees/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation "io.micronaut:micronaut-http-server-netty"
     implementation "io.micronaut:micronaut-http-client"
     implementation 'io.micronaut.configuration:micronaut-flyway'
+    implementation 'io.micronaut.configuration:micronaut-redis-lettuce'
     implementation "io.micronaut.data:micronaut-data-hibernate-jpa:$micronautDataVersion"
 //    implementation "io.micronaut.data:micronaut-data-jdbc:$micronautDataVersion"
     implementation "io.micronaut.data:micronaut-data-model:$micronautDataVersion"
