--- a/mn-employees/src/main/resources/application.yml
+++ b/mn-employees/src/main/resources/application.yml
@@ -21,7 +21,7 @@ jpa:
         auto: none
       database-platform: org.hibernate.dialect.PostgreSQLDialiect
 redis:
-  uri: redis://${REDIS_HOST:192.168.110.5}
+  uri: redis://:${REDIS_PASSWORD:Password1}@${REDIS_HOST:192.168.110.5}
 #flyway:
 #  datasources:
 #    default:
