--- a/mn-employees/k8s/deployment.yaml
+++ b/mn-employees/k8s/deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: mn-employees
-          image: 'wpfeiffearbfile/mn-employees:latest'
+          image: 'wpfeiffearbfile/mn-employees:0.0.1'
           ports:
             - containerPort: 8080
               protocol: TCP
