--- a/mn-teams/build.gradle
+++ b/mn-teams/build.gradle
@@ -18,7 +18,7 @@ import com.bmuschko.gradle.docker.tasks.image.*
 
 apply plugin: 'org.hibernate.orm'
 
-version "0.1"
+version "0.0.1"
 group "mn.teams"
 
 repositories {
@@ -94,12 +94,12 @@ task buildDockerImage(type: DockerBuildImage) {
     group = "docker"
 
     inputDir = file("${project.projectDir}")
-    tags.add("${dockerUsername}/${project.name}:latest")
+    tags.add("${dockerUsername}/${project.name}:${version}")
 }
 
 task pushDockerImage(type: DockerPushImage) {
     group = "docker"
-    imageName = "${dockerUsername}/${project.name}:latest"
+    imageName = "${dockerUsername}/${project.name}:${version}"
 }
 
 task kubernetesCreateDeployment(type: Exec) {
