--- a/mn-teams/k8s/deployment.yaml
+++ b/mn-teams/k8s/deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: mn-teams
-          image: 'wpfeiffearbfile/mn-teams:latest'
+          image: 'wpfeiffearbfile/mn-teams:0.0.1'
           ports:
             - containerPort: 8080
               protocol: TCP
