--- a/postgres/helm/postgres-claim.yaml
+++ b/postgres/helm/postgres-claim.yaml
@@ -2,8 +2,8 @@ kind: PersistentVolumeClaim
 apiVersion: v1 
 metadata:
   name: data-postgresql-claim
-#  annotations:
-#    volume.beta.kubernetes.io/storage-class: "nfs-client"
+  annotations:
+    volume.beta.kubernetes.io/storage-class: "nfs-client"
 spec:
   accessModes: 
     - ReadWriteMany 
